--- a/client/package.json
+++ b/client/package.json
@@ -40,10 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0"
-  }
+  "proxy": "http://localhost:5000"
 }
